RESOLVED FIXED230134
Fix some lldb data provider issues
https://bugs.webkit.org/show_bug.cgi?id=230134
Summary Fix some lldb data provider issues
Simon Fraser (smfr)
Reported 2021-09-09 16:46:24 PDT
Fix some lldb data provider issues
Attachments
Patch (8.44 KB, patch)
2021-09-09 16:47 PDT, Simon Fraser (smfr)
dbates: review+
Simon Fraser (smfr)
Comment 1 2021-09-09 16:47:52 PDT
Daniel Bates
Comment 2 2021-09-09 17:43:13 PDT
Comment on attachment 437805 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=437805&action=review Patch looks good. > Tools/lldb/lldbWebKitTester/main.cpp:33 > +#include <wtf/URL.h> Ok as is. Thoughts on putting this in sorted order? > Tools/lldb/lldb_webkit.py:487 > + def _is_outOfLine(self, rgba_and_flags): Ok as is. How about using snake casing for consistency? > Tools/lldb/lldb_webkit.py:509 > + out_of_line_components = self.valobj.CreateValueFromAddress('out_of_line_components', rgba_and_flags & self.COLOR_VALUE_MASK, out_of_line_components_type) I didn't know there was such a convenience API for this. Nice.
Simon Fraser (smfr)
Comment 3 2021-09-09 20:02:33 PDT
Radar WebKit Bug Importer
Comment 4 2021-09-09 20:03:17 PDT
Note You need to log in before you can comment on or make changes to this bug.