Fix some lldb data provider issues https://bugs.webkit.org/show_bug.cgi?id=230134

Reviewed by Daniel Bates.

Fix the color data provider. Add a test for the URL provider. Add an
early return in lstring_to_string that fixed an error.

* lldb/lldbWebKitTester/main.cpp:
(testSummaryProviders):
* lldb/lldb_webkit.py:
(lstring_to_string):
(WebCoreColorProvider):
(WebCoreColorProvider._is_outOfLine):
(WebCoreColorProvider._is_valid):
(WebCoreColorProvider._is_semantic):
(WebCoreColorProvider._color_space):
(WebCoreColorProvider._flags):
(WebCoreColorProvider._to_string_outOfLine):
(WebCoreColorProvider.to_string):
(WebCoreColorProvider._is_extended): Deleted.
(WebCoreColorProvider._to_string_extended): Deleted.
* lldb/lldb_webkit_unittest.py:
(TestSummaryProviders):
(TestSummaryProviders.serial_test_WTFURL_SummaryProvider):

Canonical link: https://commits.webkit.org/241532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282254 268f45cc-cd09-0410-ab3c-d52691b4dbfc